# ccbuilder

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: lint-python.yaml
ccbuilder/: __init__.py  __main__.py  bisector.py  cli.py  compilerstore.py  defaults.py
ccbuilder/builder/: builder.py  builderwithcache.py
ccbuilder/data/patches/gcc/: 0001-Fix-extend.texi-syntax.patch  0001-c-Implement-P1467R9-Extended-floating-point-types-an-alternative.patch  0001-c-Implement-P1467R9-Extended-floating-point-types-an-alternative2.patch  0001-c-Implement-P1467R9-Extended-floating-point-types-an.patch  0001-check_size_and_offset.patch  0001-fixinc-don-t-fix-machine-names-in-__has_include-.-PR.patch  0001-linux-fs.patch  0001-malloc-attribute.patch  0001-malloc-attributes-patch.patch
ccbuilder/data/patches/llvm/: 0001-uintptr_t-patch.patch
ccbuilder/patcher/: patchdatabase.py  patcher.py
ccbuilder/utils/: repository.py  utils.py
