[metadata]
name = ccbuilder
version = 0.1.0
author = Theodoros Theodoridis, Yann Girsberger
author_email = theodort@inf.ethz.ch
description = A clang/gcc compiler builder
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
url = https://github.com/DeadCodeProductions/ccbuilder

classifiers =
    Programming Language :: Python :: 3



[options]
packages = find:
python_requires = >= 3.10
include_package_data = True
install_requires =
    diopter >= 0.0.24

[options.packages.find]
include = ccbuilder*

[options.package_data]
* = *.sh *.patch *.json

[options.entry_points]
console_scripts =
    ccbuilder = ccbuilder:run_as_module
